src/objects/crms11__Notification_Rules__mdt.object
<CustomObject>
    <description>Notification rule records stores object wise events and corresponding rules to generate notification messages.</description>
    <fields>
        <fullName>crms11__Aggregate_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If aggregate results is true then a single message would be generated from multiple query results.</description>
        <inlineHelpText>If aggregate results is true then a single message would be generated from multiple query results.</inlineHelpText>
        <label>Aggregate_Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Class_Name__c</fullName>
        <description>Class name which implements &quot;CRMS_PopupService&quot; interface and provides logic to generate notifications.</description>
        <inlineHelpText>Class name which implements &quot;CRMS_PopupService&quot; interface and provides logic to generate notifications.</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Disable_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable this rule from generating notifications for all users.</description>
        <inlineHelpText>Disable this rule from generating notifications for all users.</inlineHelpText>
        <label>Disable Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Message_Template_Label__c</fullName>
        <description>Name of the label which contains the message template.</description>
        <inlineHelpText>Name of the label which contains the message template.</inlineHelpText>
        <label>Message Template Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Priority__c</fullName>
        <description>Priority of notification rule controls the order in which notification are displayed. Smaller valued notifications are displayed on higher priority. Example notifications with priority 1 would be shown before that of 2.</description>
        <inlineHelpText>Priority of notification rule controls the order in which notification are displayed. Smaller valued notifications are displayed on higher priority. Example notifications with priority 1 would be shown before that of 2.</inlineHelpText>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Query_Object__c</fullName>
        <description>Query target object against which query will be run against.</description>
        <inlineHelpText>Query target object against which query will be run against.</inlineHelpText>
        <label>Query Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Query_Template_Label__c</fullName>
        <description>Name of the custom label which contains template to build query.</description>
        <inlineHelpText>Name of the custom label which contains template to build query.</inlineHelpText>
        <label>Query Template Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Source_Object_Name__c</fullName>
        <defaultValue>&quot;Product2&quot;</defaultValue>
        <description>Object on which notifications are expected to be generated. &quot;recordId&quot; merge field is set to record of this object type.</description>
        <inlineHelpText>Object on which notifications are expected to be generated. &quot;recordId&quot; merge field is set to record of this object type.</inlineHelpText>
        <label>Source Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notification Rule</label>
    <pluralLabel>Notification Rules</pluralLabel>
</CustomObject>